Pantalla Completa. Actualización de las palabras reservadas con el Set de instrucción.

--- a/src/editor/res/reservedWords.properties
+++ b/src/editor/res/reservedWords.properties
@@ -1,13 +1,14 @@
-hello
-heritage
-happiness
-goodbye
-cruel
-car
-war
-will
-world
-wall
-add (p parameter, p2 parameter)
-add2 (p parameter, p2 parameter)
-load
+ldi reg,val
+ldm reg,addr
+stm reg,addr
+cpy regr,regs
+add regr,regs,regt
+adm regr,regs,regt
+oor regr,regs,regt
+and regr,regs,regt
+xor regr,regs,regt
+rrr reg,qty
+jmp reg,addr
+end
+
+
